5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1573_1332.log
== TEST (2019-03-11 15:29:53) 
-- CODE:
aresta = 5
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:29:54) 
-- CODE:
aresta = 5
area = 
 
print(round(area, 4))
-- EXECUTION TIME:
0.126682
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:48) 
-- CODE:
aresta = 5
area = (15//2(3)**0.5)
 
print(round(15//2(3)**0.5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (15//2(3)**0.5)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:49) 
-- CODE:
aresta = 5
area = (15//2(3)**0.5)
 
print(round(15//2(3)**0.5, 4))
-- EXECUTION TIME:
0.146062
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = (15//2(3)**0.5)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:56) 
-- CODE:
aresta = 5
area = (15//2, (3)**0.5)
 
print(round(15//2(3)**0.5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(15//2(3)**0.5, 4))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:57) 
-- CODE:
aresta = 5
area = (15//2, (3)**0.5)
 
print(round(15//2(3)**0.5, 4))
-- EXECUTION TIME:
0.154947
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 4, in <module>
    print(round(15//2(3)**0.5, 4))
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:35:12) 
-- CODE:
aresta = 5
area = (15//2) (3)**0.5
 
print(round(15//2(3)**0.5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (15//2) (3)**0.5
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:35:13) 
-- CODE:
aresta = 5
area = (15//2) (3)**0.5
 
print(round(15//2(3)**0.5, 4))
-- EXECUTION TIME:
0.188335
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = (15//2) (3)**0.5
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:35:25) 
-- CODE:
aresta = 5
area = (15//2)
		  (3)**0.5
 
print(round(15//2(3)**0.5, 4))
-- ERROR:
File "XXXX", line 3
    (3)**0.5
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:35:26) 
-- CODE:
aresta = 5
area = (15//2)
		  (3)**0.5
 
print(round(15//2(3)**0.5, 4))
-- EXECUTION TIME:
0.173322
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 3
    (3)**0.5
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:11) 
-- CODE:
aresta = 5
area = (3/2*(3)**0.5)
 
print(round(3//2(3)**0.5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(3//2(3)**0.5, 4))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:12) 
-- CODE:
aresta = 5
area = (3/2*(3)**0.5)
 
print(round(3//2(3)**0.5, 4))
-- EXECUTION TIME:
0.126971
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 4, in <module>
    print(round(3//2(3)**0.5, 4))
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:18) 
-- CODE:
aresta = 5
area = (3/2*(3)**0.5
 
print(round(3/2)*(3)**0.5, 4
-- ERROR:
File "XXXX", line 4
    print(round(3/2)*(3)**0.5, 4
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:19) 
-- CODE:
aresta = 5
area = (3/2*(3)**0.5
 
print(round(3/2)*(3)**0.5, 4
-- EXECUTION TIME:
0.145526
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 4
    print(round(3/2)*(3)**0.5, 4
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:35) 
-- CODE:
aresta = 5
area = (3/2*(3)**0.5
 
print(round((3/2)*(3)**0.5, 4)
-- ERROR:
File "XXXX", line 4
    print(round((3/2)*(3)**0.5, 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:36) 
-- CODE:
aresta = 5
area = (3/2*(3)**0.5
 
print(round((3/2)*(3)**0.5, 4)
-- EXECUTION TIME:
0.162656
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 4
    print(round((3/2)*(3)**0.5, 4)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:48) 
-- CODE:
aresta = 5
area = (15/2*(3)**0.5
 
print(round(15/2)*(3)**0.5, 4)
-- ERROR:
File "XXXX", line 4
    print(round(15/2)*(3)**0.5, 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:49) 
-- CODE:
aresta = 5
area = (15/2*(3)**0.5
 
print(round(15/2)*(3)**0.5, 4)
-- EXECUTION TIME:
0.185251
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 4
    print(round(15/2)*(3)**0.5, 4)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:41:19) 
-- CODE:
aresta = 5
area = (3/2*(3*5**2)**0.5
 
print(round(3/2)*(3*5**2)**0.5, 4)
-- ERROR:
File "XXXX", line 4
    print(round(3/2)*(3*5**2)**0.5, 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:41:20) 
-- CODE:
aresta = 5
area = (3/2*(3*5**2)**0.5
 
print(round(3/2)*(3*5**2)**0.5, 4)
-- EXECUTION TIME:
0.173869
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 4
    print(round(3/2)*(3*5**2)**0.5, 4)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:41:32) 
-- CODE:
aresta = 5
area = (3/2*(3*5**2)**0.5
 
print(round(area, 4)
-- ERROR:
File "XXXX", line 4
    print(round(area, 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:42:09) 
-- CODE:
aresta = 5
area = (3/2*((3*5**2)**0.5)
 
print(round(area, 4)
-- ERROR:
File "XXXX", line 4
    print(round(area, 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:42:28) 
-- CODE:
aresta = 5
area = (3/2*((3*5**2)**0.5))
 
print(round(area, 4)
-- ERROR:
File "XXXX", line 5
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:07) 
-- CODE:
aresta = 5
area = 3/2*((3*5**2)**0.5)
 
print(round(area, 4)
-- ERROR:
File "XXXX", line 5
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:16) 
-- CODE:
aresta = 5
area = 3/2*((3*5**2)**0.5)
 
print(round(area, 4

-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:32) 
-- CODE:
aresta = 5
area = 3/2*((3*5**2)**0.5)
 
print(round(area, 4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:57) 
-- CODE:
aresta = 5
area = 3//2*((3*5**2)**0.5)
 
print(round(area, 4))

-- OUTPUT:
8.6603
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:02) 
-- CODE:
aresta = 5
area = 3/2*((3*5**2)**0.5)
 
print(round(area, 4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:44:06) 
-- CODE:
aresta = 5
area = 3/2*((3*5**2)**0.5)
 
print(round(area, 4))

-- EXECUTION TIME:
0.244829
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:26) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2)**0.5)
 
print(round(area, 4))

-- ERROR:
File "XXXX", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:44:36) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**0.5)
 
print(round(area, 4))

-- EXECUTION TIME:
0.143034
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:40) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**0.5)
 
print(round(area, 4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:44:50) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**0.5)
 
print(round(area, 4))

-- EXECUTION TIME:
0.179739
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:47:12) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**0.5)
 
print(round(area, 4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:48:58) 
-- CODE:
aresta = 5
area = 3/2*((3)**0.5)*5**2
 
print(round(area, 4))

-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:49:24) 
-- CODE:
aresta = 5
area = 3/2*((3)**0.5)*(5**2)
 
print(round(area, 4))

-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:49:42) 
-- CODE:
aresta = 5
area = 3/2*(3**0.5)*(5**2)
 
print(round(area, 4))

-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:22) 
-- CODE:
aresta = 5
area = 75/2*(3**0.5)
 
print(round(area, 4))

-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:52) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*5**2
 
print(round(area, 4))

-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:51:01) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*5**2
 
print(round(area, 4))

-- EXECUTION TIME:
0.231639
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
